[workspace]
members = [
    "crates/racoon-common",
    "crates/racoon-database",
    "crates/racoon-db-client",
    "crates/racoon-sai",
    "crates/racoon-syncd",
    "crates/racoon-orchd",
    "crates/racoon-portd",
    "crates/racoon-fdbsyncd",
    "crates/racoon-mgmtd",
    "crates/racoon-configd",
    "crates/racoon-eventd",
    "crates/racoon-cli",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Racoon Contributors"]
repository = "https://github.com/johnwillman/Racoon"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sled = "0.34"
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }

# FFI and bindings
libc = "0.2"
libloading = "0.8"

# Networking
axum = "0.7"
tower = "0.5"
hyper = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "6.1"
bytes = "1.9"

# Testing
mockall = "0.13"
proptest = "1.5"

# Internal dependencies
racoon-common = { path = "crates/racoon-common" }
racoon-db-client = { path = "crates/racoon-db-client" }
racoon-sai = { path = "crates/racoon-sai" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
