[package]
name = "racoon-database"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
racoon-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
