[package]
name = "racoon-sai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
racoon-common = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
bindgen = "0.70"
